--- a/main.css
+++ b/main.css
@@ -24,6 +24,9 @@ h2{
 p{
     font-size: 20px;
 }
+.about p, .xp p, .interests p, .lang p{
+    text-align: center;
+}
 @media(max-width: 767px){
     h1{
         font-size: 20px;
@@ -32,5 +35,8 @@ p{
         line-height: 20px;
         max-width: 100%;
         width: 95%;
+    }
+    .about p, .xp p, .interests p, .lang p{
+        text-align: left;
     }
 }
